--- a/app/src/main/res/layout/activity_mail_and_pass.xml
+++ b/app/src/main/res/layout/activity_mail_and_pass.xml
@@ -21,6 +21,8 @@
         android:layout_height="wrap_content"
         android:text="@string/description2"
         android:textSize="20sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="10dp" />
 
     <LinearLayout
