--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,9 @@
         android:layout_height="wrap_content"
         android:text="@string/description"
         android:textSize="20sp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googleLoginButton"
