--- a/app/src/main/res/layout/activity_add_to_do.xml
+++ b/app/src/main/res/layout/activity_add_to_do.xml
@@ -36,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
+        android:hint="@string/title_hint"
         android:gravity="start|top"
         android:padding="5dp"
         android:ems="5"
@@ -44,6 +45,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:lines="1"
+        android:maxLines="1"
+        android:maxLength="30"
         android:background="#dcdcdc" />
 
     <TextView
@@ -57,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
+        android:hint="@string/note_hint"
         android:gravity="start|top"
         android:padding="8dp"
         android:ems="10"
@@ -65,6 +69,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:lines="10"
+        android:maxLength="100"
         android:background="#dcdcdc" />
 
     <LinearLayout
@@ -85,7 +90,7 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/cancel_b"
+            android:id="@+id/clear_b"
             android:layout_weight="0.5"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="15dp"
